...
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@color/colorAccent" />
    </FrameLayout>

    <TextView
        android:id="@+id/activity_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/expand_options_button"
        app:layout_constraintStart_toEndOf="@+id/activity_image_frame"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_note_text"
        android:layout_width="0dp"
...
